# powercounter

./: .coveragerc-functional  .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  powercounter  pyproject.toml
build_in_docker/: ubuntu.sh
doc/manpage/: conf.py  index.rst
doc/source/: conf.py  dev_styleguide.rst  development.rst  index.rst  installation.rst  uart_protocol.rst  usage.rst
pip_deps/: dev_requirements-linux-py3.10.12.txt  dev_requirements-linux-py3.12.2.txt  dev_requirements-linux-py3.12.3.txt  dev_requirements-linux-py3.8.10.txt  requirements-linux-py3.12.2.txt  requirements-linux-py3.12.3.txt
power_counter/: __init__.py  capture.py  capture_cmd.py  command.py  crc.py  mqtt_ifc.py  print_cmd.py  publish_cmd.py  serial_ifc.py  sml_file.py  sml_file_extractor.py  sml_message.py  sml_message_processor.py
src/: docker_entrypoint.sh  powercounter
src/power_counter/: __init__.py  capture_cmd.py  command.py  crc.py  mqtt_ifc.py  print_cmd.py  publish_cmd.py  serial_ifc.py  sml_file.py  sml_file_extractor.py  sml_message.py  sml_message_processor.py  sml_types.py
test/functional_tests/: conftest.py  print_all_test_files.sh  test_print_on_test_files.py  test_usage.py
test/unittests/: test_crc.py  test_sml_file.py  test_sml_file_extractor.py
tests/functional_tests/: run_tests.sh
tests/functional_tests/expected/: 01_usage_usage_stdout.txt  02_usage_capture_usage_stdout.txt  03_usage_print_usage_stdout.txt  04_usage_publish_usage_stdout.txt  10_capture_missing_arg_call_stderr.txt  11_capture_invalid_device_call_stdout.txt  22_print_test_files_DrNeuhaus_SMARTY_ix-130_stdout.txt  22_print_test_files_EMH_eHZ-GW8E2A500AK2_stdout.txt  22_print_test_files_EMH_eHZ-HW8E2A5L0EK2P_1_stdout.txt  22_print_test_files_EMH_eHZ-HW8E2A5L0EK2P_2_stdout.txt  22_print_test_files_EMH_eHZ-HW8E2A5L0EK2P_stdout.txt  22_print_test_files_EMH_eHZ-HW8E2AWL0EK2P_stdout.txt  22_print_test_files_EMH_eHZ-IW8E2A5L0EK2P_with_error_stdout.txt  22_print_test_files_EMH_eHZ361L5R_1_stdout.txt  (+20 more)
tests/unittests/: test_crc.py  test_sml_file.py  test_sml_file_extractor.py
(+11 files in other folders)
